prepare for day 1

--- a/aoc2022.cabal
+++ b/aoc2022.cabal
@@ -63,6 +63,7 @@ library
     -- Modules exported by the library.
     exposed-modules:  MyLib
                       Day00
+                      Day01
 
     -- Modules included in this library but not exported.
     -- other-modules:
