--- a/aoc2022.cabal
+++ b/aoc2022.cabal
@@ -64,6 +64,7 @@ library
     exposed-modules:  MyLib
                       Day00
                       Day01
+                      Day02
 
     -- Modules included in this library but not exported.
     -- other-modules:
@@ -115,5 +116,6 @@ Test-Suite doctest
   Ghc-Options:          -threaded -Wall
   Main-Is:              doctests.hs
   Build-Depends:        base
+                      , aoc2022
                       , doctest >= 0.9.3
                       , split >= 0.2.3.5
