--- a/haskel/aoc2022.cabal
+++ b/haskel/aoc2022.cabal
@@ -73,7 +73,7 @@ library
     -- other-extensions:
 
     -- Other library packages from which modules are imported.
-    build-depends:    base ^>=4.16.0.0, split == 0.2.3.5
+    build-depends:    base ^>=4.16.0.0, split == 0.2.3.5, hashmap== 1.3.3
 
     -- Directories containing source files.
     hs-source-dirs:   src
