--- a/fp-ts/package.json
+++ b/fp-ts/package.json
@@ -9,6 +9,7 @@
     "@types/node": "^18.11.18",
     "fp-ts": "^2.13.1",
     "ts-node": "^10.9.1",
+    "ts-pattern": "^4.1.1",
     "typescript": "^4.9.4"
   },
   "devDependencies": {
